[package]
name = "riscv-web-os"
version = "0.1.0"
edition = "2021"

[dependencies]
# 強制鎖定版本，避免 API 變更導致編譯失敗
riscv = { version = "=0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "=0.11.0"
panic-halt = "0.2"

embedded-alloc = "0.5"
virtio-drivers = "0.4"
smoltcp = { version = "0.10", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-tcp", "alloc"] }
log = "0.4"

# 確保依賴不會亂升級
embedded-hal = "=0.2.7"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1